# tamil-hadith-tts-app

./: .gitignore  README.md  build_db.py  clean.py  clean4.py  clean_text.py  convert_font.py  extract_hadith.py  raw_text.py  test_mnn.py
tamil_hadith_app/: README.md  analysis_options.yaml  pubspec.yaml  upload_certificate.pem
tamil_hadith_app/android/: deployment_cert.der  key.properties.example  upload_cert.der
tamil_hadith_app/android/app/: build.gradle.kts
tamil_hadith_app/android/app/src/main/: AndroidManifest.xml
tamil_hadith_app/android/app/src/main/kotlin/com/tamilhadith/tamil_hadith_audio/: MainActivity.kt
tamil_hadith_app/android/app/src/main/kotlin/io/cyberfly/tamil_quran_hadith_audio/: MainActivity.kt
tamil_hadith_app/assets/db/: tamil_ift.db
tamil_hadith_app/ios/Runner/: Info.plist
tamil_hadith_app/ios/Runner.xcodeproj/: project.pbxproj
tamil_hadith_app/lib/: main.dart  theme.dart
tamil_hadith_app/lib/models/: hadith.dart  quran_verse.dart
tamil_hadith_app/lib/screens/: bookmarks_screen.dart  hadith_detail_screen.dart  hadith_list_screen.dart  home_screen.dart  onboarding_screen.dart  quran_sura_list_screen.dart  quran_tafsir_screen.dart  quran_verse_detail_screen.dart  quran_verse_list_screen.dart  settings_screen.dart
tamil_hadith_app/lib/services/: audio_cache_service.dart  audio_player_service.dart  bookmark_service.dart  hadith_database.dart  mnn_tts_bindings.dart  model_download_service.dart  precache_service.dart  quran_database.dart  settings_service.dart  tokenizer.dart  tts_engine.dart  tts_isolate.dart
tamil_hadith_app/lib/widgets/: animated_press_card.dart  scroll_to_top_fab.dart  shimmer_loading.dart  waveform_animation.dart
tamil_hadith_app/native/: CMakeLists.txt
tamil_hadith_app/native/src/: mnn_tts.cpp  mnn_tts.h
